kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hooni
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hooni
  template:
    metadata:
      labels:
        app: hooni
    spec:
      containers:
        - name: hooni
          image: hooni:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-storage
              mountPath: /images
            - name: config-volume            # ADDED
              mountPath: /workspace/config   # ADDED
      volumes:
        - name: app-storage
          persistentVolumeClaim:
            claimName: pvc0001
        - name: config-volume                # ADDED
          configMap:                         # ADDED
            name: hooni-config               # ADDED
            items:                           # ADDED
              - key: application.properties  # ADDED
                path: application.properties # ADDED
