kube/hooni-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hooni-service
spec:
  type: NodePort
  ports:
    - port: 8080       # The port your app listens on inside the container
      targetPort: 8080
      nodePort: 30080  # The port exposed on the minikube cluster node
  selector:
    app: hooni         # Must exactly match the label in your app's deployment
