kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hooni-service
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
